Tue Jun 18 10:17:37 2013  Koichi Sasada  <ko1@atdot.net>

	* variable.c (rb_autoload): fix WB miss.

Tue Jun 18 04:20:18 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_children): don't need to care about T_ZOMBIE here.

Mon Jun 17 22:16:02 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* test/ruby/test_proc.rb (TestProc#test_block_given_method_to_proc):
	  run test for r41359.

Mon Jun 17 21:42:18 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* include/ruby/ruby.h, vm_eval.c (rb_funcall_with_block):
	  new function to invoke a method with a block passed
	  as an argument.

	* string.c (sym_call): use the above function to avoid
	  a block sharing. [ruby-dev:47438] [Bug #8531]

	* vm_insnhelper.c (vm_yield_with_cfunc): don't set block
	  in the frame.

	* test/ruby/test_symbol.rb (TestSymbol#test_block_given_to_proc):
	  run related tests.

Mon Jun 17 21:33:27 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* include/ruby/intern.h, proc.c (rb_method_call_with_block):
	  new function to invoke a Method object with a block passed
	  as an argument.

	* proc.c (bmcall): use the above function to avoid a block sharing.
	  [ruby-core:54626] [Bug #8341]

	* test/ruby/test_proc.rb (TestProc#test_block_persist_between_calls):
	  run related tests.

Mon Jun 17 20:53:21 2013  Tanaka Akira  <akr@fsij.org>

	* loadpath.c (RUBY_REVISION): Defined to suppress revision.h
	  inclusion actually.  r41352 removes the dependency.

Mon Jun 17 18:15:57 2013  Benoit Daloze  <eregontp@gmail.com>

	* ext/objspace/objspace.c: let rdoc know about objspace methods.
	  Specify 'objspace' should be required. See #8537.

Mon Jun 17 17:44:31 2013  Benoit Daloze  <eregontp@gmail.com>

	* gc.c (ObjectSpace): is a module not a class.

	* ext/objspace/objspace.c: try to include overview in rdoc,
	  see #8537.

Mon Jun 17 17:38:24 2013  Benoit Daloze  <eregontp@gmail.com>

	* gc.c: fix example of ObjectSpace.define_finalizer in overview
